--- a/Template/index.html
+++ b/Template/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hospital Form</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+        </head>
+    <body>
+        <div class="form-container">
+            <form action="{{ url_for('getprediction')}}" method="post"">
+                <div class="form-group">
+                    <label for="age" class="form-label">Age:</label>
+                    <input type="number" id="age" name="age" min="0" class="form-input">
+                </div>
 
+                <div class="form-group">
+                    <label for="height" class="form-label">Body Height:</label>
+                    <input type="number" id="height" name="height" class="form-input">
+                </div>
+
+                <div class="form-group">
+                    <label for="weight" class="form-label">Body Weight:</label>
+                    <input type="number" id="weight" name="weight" class="form-input">
+                </div>
+
+                <div class="form-group">
+                    <label for="hr" class="form-label">Heart Rate Pulse:</label>
+                    <input type="number" id="hr" name="hr" class="form-input">
+                </div>
+
+                <div class="form-group">
+                    <label for="rr" class="form-label">Respiratory Rate:</label>
+                    <input type="number" id="rr" name="rr" class="form-input">
+                </div>
+
+                <button type="submit" class="submit-btn">getprediction</button>
+            </form>
+        </div>
+        <br>
+        <br>
+
+        <p aria-setsize="20"><strong>{{output}}</strong></p>      
+    </body>
+</html>
